--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -73,6 +73,7 @@
       transform: translate(0%, 110px);
       font-size: 14px;
       z-index: 5;
+      text-align: center;
 
       span {
         width: 100%;
