--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -9,6 +9,7 @@ $primaryLight6: #fb6e001a;
 $primaryLight7: #c7570033;
 $primaryLight8: #fb6d0025;
 $primaryLight9: #291200;
+$yellow: #fda700;
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
@@ -30,6 +31,7 @@ $lightGrey2: #c7cad1;
 $lightGrey3: #f7f7f7;
 $lightGrey4: #a7a7a7;
 $lightGrey5: #ffffff0d;
+$lightGrey6: #f2f2f21f;
 $black2: #17181a;
 $black3: #111111cc;
 $black4: #11111199;
