--- a/src/components/SportsSelectionCard2/index.module.scss
+++ b/src/components/SportsSelectionCard2/index.module.scss
@@ -392,7 +392,537 @@
   }
 }
 
-@media (max-width: 1326px) {
+@media (max-width: 1900px) {
+  .container_body_card {
+    width: 643px;
+    height: 214px;
+
+    &.inset {
+      overflow: hidden;
+      padding-top: 21px;
+    }
+
+    .container_body_card_1 {
+      .container_body_left {
+        .card_mlb_vs {
+          margin: 0;
+          padding: 0;
+
+          p {
+            margin: 0;
+            padding: 0;
+          }
+        }
+
+        .team_vs {
+          margin-bottom: 18px;
+        }
+
+        .container_body_card_header {
+          display: flex;
+          align-items: center;
+          height: 30px;
+
+          .container_selected_p {
+            font-size: 20px;
+          }
+
+          button {
+            font-size: 14px;
+            width: 94px;
+          }
+
+          .container_selected {
+            padding: 0;
+            margin: 0 0 0 14px;
+
+            .container_selected_p_1 {
+              font-size: 16px;
+              img {
+                width: 28px;
+                height: 28px;
+                margin-left: 5px;
+                padding: 0;
+              }
+
+              svg {
+                margin-right: 5px;
+                width: 20px;
+                height: 20px;
+              }
+            }
+          }
+        }
+
+        .container_body_card_state {
+          margin: 5px 0 4px 0;
+          width: 360px;
+
+          &.card_state_no_data {
+            padding-left: 10px;
+          }
+
+          .card_state_mlb {
+            > div {
+              span {
+                font-size: 14px;
+              }
+
+              p {
+                font-size: 20px;
+              }
+            }
+          }
+
+          .card_state {
+            .card_state_title {
+              span {
+                font-size: 14px;
+              }
+            }
+
+            .card_state_values {
+              span {
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+
+      .container_body_right {
+        .right_img {
+          width: 102px;
+          height: 102px;
+        }
+        .img_badge {
+          width: 32px;
+          height: 32px;
+        }
+
+        p {
+          font-size: 17px;
+        }
+      }
+    }
+
+    p {
+      font-size: 16px;
+
+      span {
+        font-weight: 600;
+        font-size: 20px;
+      }
+
+      .teamA {
+        font-size: 14px;
+      }
+    }
+
+    .container_card_footer_main {
+      .card_footer {
+        .container_body_footer {
+          span {
+            font-size: 18px;
+            svg {
+              margin-right: 5px;
+              width: 20px;
+            }
+          }
+        }
+      }
+    }
+    .divider {
+      width: 340px;
+    }
+
+    .container_body_card_start_power {
+      width: 100px;
+      height: 22px;
+      padding: 5px;
+      font-size: 14px;
+      color: $darkblack;
+      position: absolute;
+      font-family: Teko;
+      transform: translate(0, -25px);
+
+      &.inset {
+        width: 150px;
+        height: 20px;
+        transform: translate(-18px, -24px);
+        font-size: 16px;
+
+        svg {
+          padding: 0;
+          margin: 0 2px 3px 0;
+          width: 18px;
+          height: 18px;
+        }
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1680px) {
+  .container_body_card {
+    width: 563px;
+    height: 214px;
+
+    &.inset {
+      overflow: hidden;
+      padding-top: 21px;
+    }
+
+    .container_body_card_1 {
+      .container_body_left {
+        .card_mlb_vs {
+          margin: 0;
+          padding: 0;
+
+          p {
+            margin: 0;
+            padding: 0;
+          }
+        }
+
+        .team_vs {
+          margin-bottom: 18px;
+        }
+
+        .container_body_card_header {
+          display: flex;
+          align-items: center;
+          height: 30px;
+
+          .container_selected_p {
+            font-size: 20px;
+          }
+
+          button {
+            font-size: 14px;
+            width: 94px;
+          }
+
+          .container_selected {
+            padding: 0;
+            margin: 0 0 0 14px;
+
+            .container_selected_p_1 {
+              font-size: 16px;
+              img {
+                width: 28px;
+                height: 28px;
+                margin-left: 5px;
+                padding: 0;
+              }
+
+              svg {
+                margin-right: 5px;
+                width: 20px;
+                height: 20px;
+              }
+            }
+          }
+        }
+
+        .container_body_card_state {
+          margin: 5px 0 4px 0;
+          width: 360px;
+
+          &.card_state_no_data {
+            padding-left: 10px;
+          }
+
+          .card_state_mlb {
+            > div {
+              span {
+                font-size: 14px;
+              }
+
+              p {
+                font-size: 20px;
+              }
+            }
+          }
+
+          .card_state {
+            .card_state_title {
+              span {
+                font-size: 14px;
+              }
+            }
+
+            .card_state_values {
+              span {
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+
+      .container_body_right {
+        .right_img {
+          width: 102px;
+          height: 102px;
+        }
+        .img_badge {
+          width: 32px;
+          height: 32px;
+        }
+
+        p {
+          font-size: 17px;
+        }
+      }
+    }
+
+    p {
+      font-size: 16px;
+
+      span {
+        font-weight: 600;
+        font-size: 20px;
+      }
+
+      .teamA {
+        font-size: 14px;
+      }
+    }
+
+    .container_card_footer_main {
+      .card_footer {
+        .container_body_footer {
+          span {
+            font-size: 16px;
+            svg {
+              margin-right: 5px;
+              width: 20px;
+            }
+          }
+        }
+      }
+    }
+    .divider {
+      width: 260px;
+    }
+
+    .container_body_card_start_power {
+      width: 100px;
+      height: 22px;
+      padding: 5px;
+      font-size: 14px;
+      color: $darkblack;
+      position: absolute;
+      font-family: Teko;
+      transform: translate(0, -25px);
+
+      &.inset {
+        width: 150px;
+        height: 20px;
+        transform: translate(-18px, -24px);
+        font-size: 16px;
+
+        svg {
+          padding: 0;
+          margin: 0 2px 3px 0;
+          width: 18px;
+          height: 18px;
+        }
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1600px) {
+  .container_body_card {
+    width: 543px !important;
+    height: 214px;
+
+    &.inset {
+      overflow: hidden;
+      padding-top: 21px;
+    }
+
+    .container_body_card_1 {
+      .container_body_left {
+        .card_mlb_vs {
+          margin: 0;
+          padding: 0;
+
+          p {
+            margin: 0;
+            padding: 0;
+          }
+        }
+
+        .team_vs {
+          margin-bottom: 18px;
+        }
+
+        .container_body_card_header {
+          display: flex;
+          align-items: center;
+          height: 30px;
+
+          .container_selected_p {
+            font-size: 20px;
+          }
+
+          button {
+            font-size: 14px;
+            width: 94px;
+          }
+
+          .container_selected {
+            padding: 0;
+            margin: 0 0 0 14px;
+
+            .container_selected_p_1 {
+              font-size: 16px;
+              img {
+                width: 28px;
+                height: 28px;
+                margin-left: 5px;
+                padding: 0;
+              }
+
+              svg {
+                margin-right: 5px;
+                width: 20px;
+                height: 20px;
+              }
+            }
+          }
+        }
+
+        .container_body_card_state {
+          margin: 5px 0 4px 0;
+          width: 300px;
+
+          &.card_state_no_data {
+            padding-left: 10px;
+          }
+
+          .card_state_mlb {
+            > div {
+              span {
+                font-size: 14px;
+              }
+
+              p {
+                font-size: 20px;
+              }
+            }
+          }
+
+          .card_state {
+            .card_state_title {
+              span {
+                font-size: 14px;
+              }
+            }
+
+            .card_state_values {
+              span {
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+
+      .container_body_right {
+        .right_img {
+          width: 102px;
+          height: 102px;
+        }
+        .img_badge {
+          width: 32px;
+          height: 32px;
+        }
+
+        p {
+          font-size: 17px;
+        }
+      }
+    }
+
+    p {
+      font-size: 16px;
+
+      span {
+        font-weight: 600;
+        font-size: 20px;
+      }
+
+      .teamA {
+        font-size: 14px;
+      }
+    }
+
+    .container_card_footer_main {
+      .card_footer {
+        .container_body_footer {
+          span {
+            svg {
+              margin-right: 5px;
+              width: 20px;
+            }
+          }
+        }
+      }
+    }
+    .divider {
+      width: 260px;
+    }
+
+    .container_body_card_start_power {
+      width: 100px;
+      height: 22px;
+      padding: 5px;
+      font-size: 14px;
+      color: $darkblack;
+      position: absolute;
+      font-family: Teko;
+      transform: translate(0, -25px);
+
+      &.inset {
+        width: 150px;
+        height: 20px;
+        transform: translate(-18px, -24px);
+        font-size: 16px;
+
+        svg {
+          padding: 0;
+          margin: 0 2px 3px 0;
+          width: 18px;
+          height: 18px;
+        }
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1366px) {
   .container_body_card {
     padding: 14px 12px;
     width: 423px;
